fix: change styling for Projects on mobile - tested in Chrome and Safari

--- a/src/index.css
+++ b/src/index.css
@@ -121,15 +121,6 @@ a {
   transition: padding 0.5s ease, background-color 0.8s ease;
 }
 
-.info {
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
-
-.info-visible {
-  opacity: 1;
-}
-
 .animate-image {
   animation: appear 1.2s ease-in-out;
   transition: opacity 0.3s ease;
